seaqt/QtGui/gen_qaccessible.h

typedef QAccessible::ActivationObserver QAccessible__ActivationObserver;
typedef QAccessible::State QAccessible__State;
typedef struct QAccessible__ActivationObserver QAccessible__ActivationObserver;
typedef struct QAccessible__State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEditableTextInterface QAccessibleEditableTextInterface;
typedef struct QAccessibleEvent QAccessibleEvent;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableCellInterface QAccessibleTableCellInterface;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTextInterface QAccessibleTextInterface;
typedef struct QAccessibleValueInterface QAccessibleValueInterface;
typedef struct QColor QColor;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QTextCursor QTextCursor;
typedef struct QVariant QVariant;
typedef struct QWindow QWindow;
void QAccessible_installActivationObserver(QAccessible__ActivationObserver* param1);
void QAccessible_removeActivationObserver(QAccessible__ActivationObserver* param1);
QAccessibleInterface* QAccessible_queryAccessibleInterface(QObject* param1);
unsigned int QAccessible_uniqueId(QAccessibleInterface* iface);
QAccessibleInterface* QAccessible_accessibleInterface(unsigned int uniqueId);
unsigned int QAccessible_registerAccessibleInterface(QAccessibleInterface* iface);
void QAccessible_deleteAccessibleInterface(unsigned int uniqueId);
void QAccessible_updateAccessibility(QAccessibleEvent* event);
bool QAccessible_isActive();
void QAccessible_setActive(bool active);
void QAccessible_setRootObject(QObject* object);
void QAccessible_cleanup();
struct seaqt_map /* tuple of int and int */  QAccessible_qAccessibleTextBoundaryHelper(QTextCursor* cursor, int boundaryType);
const QMetaObject* QAccessible_staticMetaObject();
bool QAccessibleInterface_isValid(const QAccessibleInterface* self);
QObject* QAccessibleInterface_object(const QAccessibleInterface* self);
QWindow* QAccessibleInterface_window(const QAccessibleInterface* self);
struct seaqt_array /* of struct seaqt_map  tuple of QAccessibleInterface* and int   */  QAccessibleInterface_relations(const QAccessibleInterface* self, int match);
QAccessibleInterface* QAccessibleInterface_focusChild(const QAccessibleInterface* self);
QAccessibleInterface* QAccessibleInterface_childAt(const QAccessibleInterface* self, int x, int y);
QAccessibleInterface* QAccessibleInterface_parent(const QAccessibleInterface* self);
QAccessibleInterface* QAccessibleInterface_child(const QAccessibleInterface* self, int index);
int QAccessibleInterface_childCount(const QAccessibleInterface* self);
int QAccessibleInterface_indexOfChild(const QAccessibleInterface* self, QAccessibleInterface* param1);
struct seaqt_string QAccessibleInterface_text(const QAccessibleInterface* self, int t);
void QAccessibleInterface_setText(QAccessibleInterface* self, int t, struct seaqt_string text);
QRect* QAccessibleInterface_rect(const QAccessibleInterface* self);
int QAccessibleInterface_role(const QAccessibleInterface* self);
QAccessible__State* QAccessibleInterface_state(const QAccessibleInterface* self);
QColor* QAccessibleInterface_foregroundColor(const QAccessibleInterface* self);
QColor* QAccessibleInterface_backgroundColor(const QAccessibleInterface* self);
QAccessibleTextInterface* QAccessibleInterface_textInterface(QAccessibleInterface* self);
QAccessibleEditableTextInterface* QAccessibleInterface_editableTextInterface(QAccessibleInterface* self);
QAccessibleValueInterface* QAccessibleInterface_valueInterface(QAccessibleInterface* self);
QAccessibleActionInterface* QAccessibleInterface_actionInterface(QAccessibleInterface* self);
QAccessibleImageInterface* QAccessibleInterface_imageInterface(QAccessibleInterface* self);
QAccessibleTableInterface* QAccessibleInterface_tableInterface(QAccessibleInterface* self);
QAccessibleTableCellInterface* QAccessibleInterface_tableCellInterface(QAccessibleInterface* self);
void QAccessibleInterface_virtualHook(QAccessibleInterface* self, int id, void* data);
void* QAccessibleInterface_interfaceCast(QAccessibleInterface* self, int param1);
void QAccessibleInterface_operatorAssign(QAccessibleInterface* self, QAccessibleInterface* param1);
void QAccessibleTextInterface_selection(const QAccessibleTextInterface* self, int selectionIndex, int* startOffset, int* endOffset);
int QAccessibleTextInterface_selectionCount(const QAccessibleTextInterface* self);
void QAccessibleTextInterface_addSelection(QAccessibleTextInterface* self, int startOffset, int endOffset);
void QAccessibleTextInterface_removeSelection(QAccessibleTextInterface* self, int selectionIndex);
void QAccessibleTextInterface_setSelection(QAccessibleTextInterface* self, int selectionIndex, int startOffset, int endOffset);
int QAccessibleTextInterface_cursorPosition(const QAccessibleTextInterface* self);
void QAccessibleTextInterface_setCursorPosition(QAccessibleTextInterface* self, int position);
struct seaqt_string QAccessibleTextInterface_text(const QAccessibleTextInterface* self, int startOffset, int endOffset);
struct seaqt_string QAccessibleTextInterface_textBeforeOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
struct seaqt_string QAccessibleTextInterface_textAfterOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
struct seaqt_string QAccessibleTextInterface_textAtOffset(const QAccessibleTextInterface* self, int offset, int boundaryType, int* startOffset, int* endOffset);
int QAccessibleTextInterface_characterCount(const QAccessibleTextInterface* self);
QRect* QAccessibleTextInterface_characterRect(const QAccessibleTextInterface* self, int offset);
int QAccessibleTextInterface_offsetAtPoint(const QAccessibleTextInterface* self, QPoint* point);
void QAccessibleTextInterface_scrollToSubstring(QAccessibleTextInterface* self, int startIndex, int endIndex);
struct seaqt_string QAccessibleTextInterface_attributes(const QAccessibleTextInterface* self, int offset, int* startOffset, int* endOffset);
void QAccessibleTextInterface_operatorAssign(QAccessibleTextInterface* self, QAccessibleTextInterface* param1);
void QAccessibleEditableTextInterface_deleteText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset);
void QAccessibleEditableTextInterface_insertText(QAccessibleEditableTextInterface* self, int offset, struct seaqt_string text);
void QAccessibleEditableTextInterface_replaceText(QAccessibleEditableTextInterface* self, int startOffset, int endOffset, struct seaqt_string text);
void QAccessibleEditableTextInterface_operatorAssign(QAccessibleEditableTextInterface* self, QAccessibleEditableTextInterface* param1);
QVariant* QAccessibleValueInterface_currentValue(const QAccessibleValueInterface* self);
void QAccessibleValueInterface_setCurrentValue(QAccessibleValueInterface* self, QVariant* value);
QVariant* QAccessibleValueInterface_maximumValue(const QAccessibleValueInterface* self);
QVariant* QAccessibleValueInterface_minimumValue(const QAccessibleValueInterface* self);
QVariant* QAccessibleValueInterface_minimumStepSize(const QAccessibleValueInterface* self);
void QAccessibleValueInterface_operatorAssign(QAccessibleValueInterface* self, QAccessibleValueInterface* param1);
bool QAccessibleTableCellInterface_isSelected(const QAccessibleTableCellInterface* self);
struct seaqt_array /* of QAccessibleInterface* */  QAccessibleTableCellInterface_columnHeaderCells(const QAccessibleTableCellInterface* self);
struct seaqt_array /* of QAccessibleInterface* */  QAccessibleTableCellInterface_rowHeaderCells(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_columnIndex(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_rowIndex(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_columnExtent(const QAccessibleTableCellInterface* self);
int QAccessibleTableCellInterface_rowExtent(const QAccessibleTableCellInterface* self);
QAccessibleInterface* QAccessibleTableCellInterface_table(const QAccessibleTableCellInterface* self);
void QAccessibleTableCellInterface_operatorAssign(QAccessibleTableCellInterface* self, QAccessibleTableCellInterface* param1);
QAccessibleInterface* QAccessibleTableInterface_caption(const QAccessibleTableInterface* self);
QAccessibleInterface* QAccessibleTableInterface_summary(const QAccessibleTableInterface* self);
QAccessibleInterface* QAccessibleTableInterface_cellAt(const QAccessibleTableInterface* self, int row, int column);
int QAccessibleTableInterface_selectedCellCount(const QAccessibleTableInterface* self);
struct seaqt_array /* of QAccessibleInterface* */  QAccessibleTableInterface_selectedCells(const QAccessibleTableInterface* self);
struct seaqt_string QAccessibleTableInterface_columnDescription(const QAccessibleTableInterface* self, int column);
struct seaqt_string QAccessibleTableInterface_rowDescription(const QAccessibleTableInterface* self, int row);
int QAccessibleTableInterface_selectedColumnCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_selectedRowCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_columnCount(const QAccessibleTableInterface* self);
int QAccessibleTableInterface_rowCount(const QAccessibleTableInterface* self);
struct seaqt_array /* of int */  QAccessibleTableInterface_selectedColumns(const QAccessibleTableInterface* self);
struct seaqt_array /* of int */  QAccessibleTableInterface_selectedRows(const QAccessibleTableInterface* self);
bool QAccessibleTableInterface_isColumnSelected(const QAccessibleTableInterface* self, int column);